# EcoTrack

./: .env.example  .firebaserc  .gitignore  .vercelignore  README.md  app.py  config.py  firebase.json  pyproject.toml  render.yaml  requirements.txt
api/: __init__.py  calculator.py  challenges.py  ecobot.py  routes.py  tips.py
static/: manifest.json  service-worker.js
static/css/: dark-mode.css  ecobot.css  map.css  styles.css
static/js/: app.js  auth.js  calculator.js  challenges.js  charts.js  dashboard-ui.js  dashboard.js  ecobot.js  firebase-config.js  firestore.js  help.js  import.js  insights.js  map.js  notifications.js  settings.js
templates/: index.html
tests/: __init__.py  conftest.py  test_api.py  test_calculator.py  test_routes_firestore.py  test_validation.py
