[project]
name = "ecotrack"
version = "1.0.0"
description = "EcoTrack — AI-powered carbon footprint awareness platform (Flask + Firebase)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Divyaraj" }]
keywords = ["carbon-footprint", "sustainability", "flask", "firebase", "ai"]

dependencies = [
    "flask>=3.0",
    "flask-cors>=4.0",
    "flask-limiter>=3.7",
    "firebase-admin>=6.5",
    "python-dotenv>=1.0",
    "gunicorn>=22.0",
    "groq>=0.9",
    "google-generativeai>=0.7",
    "requests>=2.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-flask>=1.3",
    "pytest-cov>=5.0",
    "coverage>=7.5",
]

[project.urls]
Homepage = "https://ecotrack-flask-app.vercel.app"
Repository = "https://github.com/Divyaraj0001-design/EcoTrack"

# ── Test configuration ───────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra -q"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# ── Coverage configuration ───────────────────────────────────────────────────
[tool.coverage.run]
source = ["api", "app", "config"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

# ── Lint / format configuration ──────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]  # line length handled by formatter

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
